@@ -57,15 +57,14 @@ public class ProjectService {
             throw new ValidationException("Project key already exists: " + projectDTO.projectKey());
         }
 
-        User owner = userDAO.getUserById(userId)
+        var owner = userDAO.getUserById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-        List<String> attachmentUrls = new ArrayList<>();
-        if (attachments != null && !attachments.isEmpty()) {
-            attachmentUrls = fileStorageService.storeFiles(attachments);
-        }
+        var attachmentUrls = (attachments != null && !attachments.isEmpty())
+                ? fileStorageService.storeFiles(attachments)
+                : new ArrayList<String>();
 
-        Project project = new Project();
+        var project = new Project();
         project.setProjectKey(projectDTO.projectKey());
         project.setSummary(projectDTO.summary());
         project.setDescription(projectDTO.description());
@@ -73,47 +72,26 @@ public class ProjectService {
         project.setNextTaskNumber(1);
         project.setAttachments(attachmentUrls);
 
-        Set<User> members = new HashSet<>();
-        members.add(owner);
-
-        // Frontend sends members array with email objects
-        if (projectDTO.members() != null) {
-            for (UserDTO memberDTO : projectDTO.members()) {
-                if (!memberDTO.email().equals(owner.getEmail())) {
-                    User member = userDAO.getUserByEmail(memberDTO.email())
-                            .orElseThrow(() -> new ValidationException(
-                                    "User with email " + memberDTO.email() + " does not exist"));
-                    members.add(member);
-                }
-            }
-        }
+        var members = resolveMembersFromEmails(projectDTO.members(), owner);
         project.setMembers(new ArrayList<>(members));
 
         if (projectDTO.dependencies() != null && !projectDTO.dependencies().isEmpty()) {
-            List<Project> dependencies = projectDTO.dependencies().stream()
+            var dependencies = projectDTO.dependencies().stream()
                     .map(depKey -> projectDAO.getProjectByKey(depKey)
                             .orElseThrow(() -> new ValidationException("Dependency project not found: " + depKey)))
-                    .collect(Collectors.toList());
+                    .toList();
+            validateNoProjectCycles(project, dependencies);
             project.setDependencies(dependencies);
         }
 
-        Project savedProject = projectDAO.save(project);
-
-        for (User member : members) {
-            if (!member.getId().equals(owner.getId())) {
-                String message = "You have been added to project: " + project.getSummary();
-                String link = "/projects/" + project.getProjectKey();
-                notificationService.createNotification(member, message,
-                        NotificationType.PROJECT_INVITATION, link);
-            }
-        }
-
+        var savedProject = projectDAO.save(project);
+        notifyNewMembersExcludingOwner(members, owner, savedProject);
         return convertToDTO(savedProject);
     }
 
     @Transactional(readOnly = true)
     public ProjectDTO getProjectByKey(String projectKey, Integer userId) {
-        Project project = projectDAO.getProjectByKey(projectKey)
+        var project = projectDAO.getProjectByKey(projectKey)
                 .orElseThrow(() -> new ResourceNotFoundException("Project not found"));
 
         if (!project.hasAccess(userId)) {
@@ -125,17 +103,17 @@ public class ProjectService {
 
     @Transactional(readOnly = true)
     public List<ProjectDTO> getAllProjects(Integer userId) {
-        List<Project> projects = projectDAO.getProjectsByUserId(userId);
+        var projects = projectDAO.getProjectsByUserId(userId);
         return projects.stream()
                 .map(this::convertToDTOWithCPM)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public ProjectDTO updateProject(ProjectDTO projectDTO, Integer userId, List<MultipartFile> attachments) {
         validateProjectDTO(projectDTO);
 
-        Project project = projectDAO.getProjectByKey(projectDTO.projectKey())
+        var project = projectDAO.getProjectByKey(projectDTO.projectKey())
                 .orElseThrow(() -> new ResourceNotFoundException("Project not found"));
 
         if (!project.isOwner(userId)) {
@@ -146,7 +124,7 @@ public class ProjectService {
         project.setDescription(projectDTO.description());
 
         if (attachments != null && !attachments.isEmpty()) {
-            List<String> newAttachments = fileStorageService.storeFiles(attachments);
+            var newAttachments = fileStorageService.storeFiles(attachments);
             if (project.getAttachments() != null) {
                 project.getAttachments().addAll(newAttachments);
             } else {
@@ -154,56 +132,111 @@ public class ProjectService {
             }
         }
 
-        List<User> oldMembers = new ArrayList<>(project.getMembers());
-
-        // Handle members update - frontend sends members array
         if (projectDTO.members() != null) {
-            Set<User> newMembers = new HashSet<>();
-            User owner = project.getOwner();
-            newMembers.add(owner);
-
-            for (UserDTO memberDTO : projectDTO.members()) {
-                if (!memberDTO.email().equals(owner.getEmail())) {
-                    User member = userDAO.getUserByEmail(memberDTO.email())
-                            .orElseThrow(() -> new ValidationException(
-                                    "User with email " + memberDTO.email() + " does not exist"));
-                    newMembers.add(member);
-                }
-            }
-            project.setMembers(new ArrayList<>(newMembers));
-
-            for (User member : newMembers) {
-                if (!oldMembers.contains(member) && !member.getId().equals(owner.getId())) {
-                    String message = "You have been added to project: " + project.getSummary();
-                    String link = "/projects/" + project.getProjectKey();
-                    notificationService.createNotification(member, message,
-                            NotificationType.PROJECT_INVITATION, link);
-                }
-            }
+            updateProjectMembersAndNotifyNewMembers(project, projectDTO.members());
         }
 
         if (projectDTO.dependencies() != null) {
-            List<Project> dependencies = projectDTO.dependencies().stream()
+            var dependencies = projectDTO.dependencies().stream()
                     .map(depKey -> projectDAO.getProjectByKey(depKey)
                             .orElseThrow(() -> new ValidationException("Dependency project not found: " + depKey)))
-                    .collect(Collectors.toList());
+                    .toList();
+            validateNoProjectCycles(project, dependencies);
             project.setDependencies(dependencies);
         }
 
-        Project updatedProject = projectDAO.save(project);
+        var updatedProject = projectDAO.save(project);
         return convertToDTO(updatedProject);
     }
 
     @Transactional
     public void deleteProject(String projectKey, Integer userId) {
-        Project project = projectDAO.getProjectByKey(projectKey)
+        var project = projectDAO.getProjectByKey(projectKey)
                 .orElseThrow(() -> new ResourceNotFoundException("Project not found"));
 
         if (!project.isOwner(userId)) {
             throw new AuthorizationException("Only project owner can delete the project");
         }
 
+        deleteAllProjectAttachmentsSilently(project);
         projectDAO.deleteProject(project);
+    }
+
+    private Set<User> resolveMembersFromEmails(List<UserDTO> memberDTOs, User owner) {
+        var members = new HashSet<User>();
+        members.add(owner);
+        if (memberDTOs == null || memberDTOs.isEmpty()) return members;
+
+        // Collect emails to fetch (excluding owner)
+        var emailsToFetch = memberDTOs.stream()
+                .map(UserDTO::email)
+                .filter(email -> !email.equals(owner.getEmail()))
+                .collect(Collectors.toSet());
+
+        if (emailsToFetch.isEmpty()) return members;
+
+        // Batch load all users in single query
+        var usersByEmail = userDAO.findByEmailsAsMap(emailsToFetch);
+
+        // Verify all requested users were found and add to members
+        for (String email : emailsToFetch) {
+            var user = usersByEmail.get(email);
+            if (user == null) {
+                throw new ValidationException("User with email " + email + " does not exist");
+            }
+            members.add(user);
+        }
+
+        return members;
+    }
+
+    private void updateProjectMembersAndNotifyNewMembers(Project project, List<UserDTO> memberDTOs) {
+        var existingMemberIds = project.getMembers().stream()
+                .map(User::getId)
+                .collect(Collectors.toSet());
+
+        var owner = project.getOwner();
+        var updatedMembers = resolveMembersFromEmails(memberDTOs, owner);
+        project.setMembers(new ArrayList<>(updatedMembers));
+
+        for (var member : updatedMembers) {
+            var isNewMember = !existingMemberIds.contains(member.getId());
+            var isNotOwner = !member.getId().equals(owner.getId());
+            if (isNewMember && isNotOwner) {
+                notifyMemberAddedToProject(member, project);
+            }
+        }
+    }
+
+    private void notifyNewMembersExcludingOwner(Set<User> members, User owner, Project project) {
+        for (var member : members) {
+            if (!member.getId().equals(owner.getId())) {
+                notifyMemberAddedToProject(member, project);
+            }
+        }
+    }
+
+    private void notifyMemberAddedToProject(User member, Project project) {
+        var message = "You have been added to project: " + project.getSummary();
+        var link = "/projects/" + project.getProjectKey();
+        notificationService.createNotification(member, message, NotificationType.PROJECT_INVITATION, link);
+    }
+
+    private void deleteAllProjectAttachmentsSilently(Project project) {
+        deleteAttachmentsSilently(project.getAttachments());
+        for (Task task : project.getTasks()) {
+            deleteAttachmentsSilently(task.getAttachments());
+        }
+    }
+
+    private void deleteAttachmentsSilently(List<String> attachments) {
+        if (attachments == null) return;
+        for (String attachment : attachments) {
+            try {
+                fileStorageService.deleteFile(attachment);
+            } catch (Exception ignored) {
+            }
+        }
     }
 
     private void validateProjectDTO(ProjectDTO projectDTO) {
@@ -216,32 +249,53 @@ public class ProjectService {
             throw new ValidationException(
                     "Project key must start with a letter and contain only uppercase letters and numbers");
         }
+
+        if (projectDTO.summary().length() > ValidationUtil.MAX_SUMMARY_LENGTH) {
+            throw new ValidationException("Summary exceeds maximum length of " + ValidationUtil.MAX_SUMMARY_LENGTH + " characters");
+        }
+
+        if (projectDTO.description() != null && projectDTO.description().length() > ValidationUtil.MAX_DESCRIPTION_LENGTH) {
+            throw new ValidationException("Description exceeds maximum length of " + ValidationUtil.MAX_DESCRIPTION_LENGTH + " characters");
+        }
+    }
+
+    private void validateNoProjectCycles(Project project, List<Project> newDependencies) {
+        if (project.getId() == null || newDependencies.isEmpty()) {
+            return;
+        }
+
+        var visited = new HashSet<Integer>();
+        var queue = new LinkedList<>(newDependencies);
+
+        while (!queue.isEmpty()) {
+            var current = queue.poll();
+            if (current.getId().equals(project.getId())) {
+                throw new ValidationException("Circular dependency detected: project cannot depend on itself");
+            }
+            if (visited.add(current.getId()) && current.getDependencies() != null) {
+                queue.addAll(current.getDependencies());
+            }
+        }
     }
 
     private ProjectDTO convertToDTO(Project project) {
-        List<TaskDTO> tasks = project.getTasks() != null
-                ? project.getTasks().stream()
-                .map(taskService::convertToDTO)
-                .collect(Collectors.toList())
-                : new ArrayList<>();
+        var tasks = project.getTasks() != null
+                ? project.getTasks().stream().map(taskService::convertToDTO).toList()
+                : new ArrayList<TaskDTO>();
 
-        List<UserDTO> members = project.getMembers() != null
-                ? project.getMembers().stream()
-                .map(this::convertUserToDTO)
-                .collect(Collectors.toList())
-                : new ArrayList<>();
+        var members = project.getMembers() != null
+                ? project.getMembers().stream().map(this::convertUserToDTO).toList()
+                : new ArrayList<UserDTO>();
 
-        UserDTO ownerDTO = convertUserToDTO(project.getOwner());
+        var ownerDTO = convertUserToDTO(project.getOwner());
 
-        List<String> dependencyKeys = project.getDependencies() != null
-                ? project.getDependencies().stream()
-                .map(Project::getProjectKey)
-                .collect(Collectors.toList())
-                : new ArrayList<>();
+        var dependencyKeys = project.getDependencies() != null
+                ? project.getDependencies().stream().map(Project::getProjectKey).toList()
+                : new ArrayList<String>();
 
-        List<String> attachments = project.getAttachments() != null
+        var attachments = project.getAttachments() != null
                 ? new ArrayList<>(project.getAttachments())
-                : new ArrayList<>();
+                : new ArrayList<String>();
 
         return new ProjectDTO(
                 project.getId(),
@@ -257,28 +311,26 @@ public class ProjectService {
     }
 
     private ProjectDTO convertToDTOWithCPM(Project project) {
-        List<Task> tasks = taskDAO.getTasksByProjectIdWithDetails(project.getId());
+        var tasks = taskDAO.getTasksByProjectIdWithDetails(project.getId());
         tasks.sort(Comparator.comparingInt(Task::getTaskNumber));
 
-        List<TaskDTO> taskDTOs = tasks.stream()
+        var taskDTOs = tasks.stream()
                 .map(taskService::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<TaskDTO> updatedTaskDTOs = cpmHelper.calculateTaskDTOsWithCPM(taskDTOs);
+        var updatedTaskDTOs = cpmHelper.calculateTaskDTOsWithCPM(taskDTOs);
 
-        List<UserDTO> members = project.getMembers().stream()
+        var members = project.getMembers().stream()
                 .map(this::convertUserToDTO)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<String> dependencyKeys = project.getDependencies() != null
-                ? project.getDependencies().stream()
-                .map(Project::getProjectKey)
-                .collect(Collectors.toList())
-                : new ArrayList<>();
+        var dependencyKeys = project.getDependencies() != null
+                ? project.getDependencies().stream().map(Project::getProjectKey).toList()
+                : new ArrayList<String>();
 
-        List<String> attachments = project.getAttachments() != null
+        var attachments = project.getAttachments() != null
                 ? new ArrayList<>(project.getAttachments())
-                : new ArrayList<>();
+                : new ArrayList<String>();
 
         return new ProjectDTO(
                 project.getId(),
