@@ -13,10 +13,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -41,32 +38,31 @@ public class TaskService {
     public TaskDTO createTask(String projectKey, TaskDTO taskDTO, Integer userId, List<MultipartFile> files) {
         validateTaskDTO(taskDTO);
 
-        List<String> attachmentUrls = new ArrayList<>();
-        if (files != null && !files.isEmpty()) {
-            attachmentUrls = fileStorageService.storeFiles(files);
-        }
+        var attachmentUrls = (files != null && !files.isEmpty())
+                ? fileStorageService.storeFiles(files)
+                : new ArrayList<String>();
 
-        Project project = projectDAO.getProjectByKeyWithLock(projectKey)
+        var project = projectDAO.getProjectByKeyWithLock(projectKey)
                 .orElseThrow(() -> new ResourceNotFoundException("Project not found"));
 
         if (!project.hasAccess(userId)) {
             throw new ResourceNotFoundException("Project not found");
         }
 
-        Task task = new Task();
+        var task = new Task();
         task.setSummary(taskDTO.summary());
         task.setDescription(taskDTO.description());
-        task.setStatus(taskDTO.status() != null ? taskDTO.status() : TaskStatus.BACKLOG);
+        task.setStatus(Objects.requireNonNullElse(taskDTO.status(), TaskStatus.BACKLOG));
         task.setStartDate(taskDTO.startDate());
         task.setDueDate(taskDTO.dueDate());
-        task.setPriority(taskDTO.priority() != null ? taskDTO.priority() : TaskPriority.MEDIUM);
-        task.setProgress(taskDTO.progress() != null ? taskDTO.progress() : 0);
+        task.setPriority(Objects.requireNonNullElse(taskDTO.priority(), TaskPriority.MEDIUM));
+        task.setProgress(Objects.requireNonNullElse(taskDTO.progress(), 0));
         task.setProject(project);
         task.setTaskNumber(project.allocateNextTaskNumber());
         task.setAttachments(attachmentUrls);
 
         if (taskDTO.assignee() != null && !taskDTO.assignee().isEmpty()) {
-            User assignee = userDAO.getUserByEmail(taskDTO.assignee())
+            var assignee = userDAO.getUserByEmail(taskDTO.assignee())
                     .orElseThrow(() -> new ValidationException("Assignee not found"));
             task.setAssignee(assignee);
         }
@@ -75,18 +71,17 @@ public class TaskService {
             task.setLabels(String.join(",", taskDTO.labels()));
         }
 
-        // Handle dependencies - frontend sends task IDs as integers
+        persistProjectWithIncrementedTaskCounter(project);
+
         if (taskDTO.dependencyKeys() != null && !taskDTO.dependencyKeys().isEmpty()) {
-            List<Task> dependencies = resolveDependencies(taskDTO.dependencyKeys());
-            task.setDependencies(dependencies);
+            task.setDependencies(resolveDependenciesBatch(taskDTO.dependencyKeys()));
         }
 
-        projectDAO.save(project);
-        Task savedTask = taskDAO.save(task);
+        var savedTask = taskDAO.save(task);
 
         if (task.getAssignee() != null && !task.getAssignee().getId().equals(userId)) {
-            String message = "You have been assigned to task: " + task.getSummary();
-            String link = "/projects?selectedIssue=" + savedTask.getTaskKey();
+            var message = "You have been assigned to task: " + task.getSummary();
+            var link = "/projects?selectedIssue=" + savedTask.getTaskKey();
             notificationService.createNotification(task.getAssignee(), message,
                     NotificationType.TASK_ASSIGNED, link);
         }
@@ -99,14 +94,14 @@ public class TaskService {
                               Integer userId, List<MultipartFile> files) {
         validateTaskDTO(taskDTO);
 
-        Project project = projectDAO.getProjectByKey(projectKey)
+        var project = projectDAO.getProjectByKey(projectKey)
                 .orElseThrow(() -> new ResourceNotFoundException("Project not found"));
 
         if (!project.hasAccess(userId)) {
             throw new ResourceNotFoundException("Project not found");
         }
 
-        Task task = taskDAO.getTaskByTaskKey(taskKey)
+        var task = taskDAO.getTaskByTaskKey(taskKey)
                 .orElseThrow(() -> new ResourceNotFoundException("Task not found: " + taskKey));
 
         if (!task.getProject().getId().equals(project.getId())) {
@@ -115,14 +110,14 @@ public class TaskService {
 
         task.setSummary(taskDTO.summary());
         task.setDescription(taskDTO.description());
-        task.setStatus(taskDTO.status() != null ? taskDTO.status() : TaskStatus.BACKLOG);
+        task.setStatus(Objects.requireNonNullElse(taskDTO.status(), TaskStatus.BACKLOG));
         task.setStartDate(taskDTO.startDate());
         task.setDueDate(taskDTO.dueDate());
-        task.setProgress(taskDTO.progress() != null ? taskDTO.progress() : 0);
-        task.setPriority(taskDTO.priority() != null ? taskDTO.priority() : TaskPriority.MEDIUM);
+        task.setProgress(Objects.requireNonNullElse(taskDTO.progress(), 0));
+        task.setPriority(Objects.requireNonNullElse(taskDTO.priority(), TaskPriority.MEDIUM));
 
         if (taskDTO.assignee() != null && !taskDTO.assignee().isEmpty()) {
-            User assignee = userDAO.getUserByEmail(taskDTO.assignee())
+            var assignee = userDAO.getUserByEmail(taskDTO.assignee())
                     .orElseThrow(() -> new ValidationException("Assignee not found"));
             task.setAssignee(assignee);
         } else {
@@ -133,30 +128,22 @@ public class TaskService {
             task.setLabels(String.join(",", taskDTO.labels()));
         }
 
-        if (taskDTO.attachments() != null) {
-            task.setAttachments(new ArrayList<>(taskDTO.attachments()));
-        } else {
-            task.setAttachments(new ArrayList<>());
-        }
+        task.setAttachments(taskDTO.attachments() != null
+                ? new ArrayList<>(taskDTO.attachments())
+                : new ArrayList<>());
 
         if (files != null && !files.isEmpty()) {
-            List<String> newAttachments = fileStorageService.storeFiles(files);
+            var newAttachments = fileStorageService.storeFiles(files);
             task.getAttachments().addAll(newAttachments);
         }
 
-        // Handle dependencies - can be task IDs (integers) or task keys (strings)
-        if (taskDTO.dependencyKeys() != null) {
-            List<Task> dependencies = resolveDependencies(taskDTO.dependencyKeys());
-            task.setDependencies(dependencies);
-        } else {
-            task.setDependencies(new ArrayList<>());
-        }
+        updateTaskDependencies(task, taskDTO.dependencyKeys());
 
-        Task updatedTask = taskDAO.save(task);
+        var updatedTask = taskDAO.save(task);
 
         if (task.getAssignee() != null && !task.getAssignee().getId().equals(userId)) {
-            String message = "Task '" + task.getSummary() + "' has been updated";
-            String link = "/projects?selectedIssue=" + updatedTask.getTaskKey();
+            var message = "Task '" + task.getSummary() + "' has been updated";
+            var link = "/projects?selectedIssue=" + updatedTask.getTaskKey();
             notificationService.createNotification(task.getAssignee(), message,
                     NotificationType.TASK_UPDATED, link);
         }
@@ -164,31 +151,12 @@ public class TaskService {
         return convertToDTO(updatedTask);
     }
 
-    @Transactional
-    public void deleteTask(String projectKey, String taskKey, Integer userId) {
-        Project project = projectDAO.getProjectByKey(projectKey)
-                .orElseThrow(() -> new ResourceNotFoundException("Project not found"));
-
-        if (!project.isOwner(userId)) {
-            throw new AuthorizationException("Only project owner can delete tasks");
-        }
-
-        Task task = taskDAO.getTaskByTaskKey(taskKey)
-                .orElseThrow(() -> new ResourceNotFoundException("Task not found: " + taskKey));
-
-        if (!task.getProject().getId().equals(project.getId())) {
-            throw new ValidationException("Task does not belong to the specified project");
-        }
-
-        taskDAO.deleteTask(task);
-    }
-
     @Transactional(readOnly = true)
     public List<TaskDTO> getTasksAssignedToUser(Integer userId) {
-        List<Task> tasks = taskDAO.getTasksAssignedToUser(userId);
+        var tasks = taskDAO.getTasksAssignedToUser(userId);
         return tasks.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void validateTaskDTO(TaskDTO taskDTO) {
@@ -198,27 +166,31 @@ public class TaskService {
         if (taskDTO.status() == null) {
             throw new ValidationException("Status is required");
         }
+        if (taskDTO.summary().length() > ValidationUtil.MAX_SUMMARY_LENGTH) {
+            throw new ValidationException("Summary exceeds maximum length of " + ValidationUtil.MAX_SUMMARY_LENGTH + " characters");
+        }
+        if (taskDTO.description() != null && taskDTO.description().length() > ValidationUtil.MAX_DESCRIPTION_LENGTH) {
+            throw new ValidationException("Description exceeds maximum length of " + ValidationUtil.MAX_DESCRIPTION_LENGTH + " characters");
+        }
+        if (taskDTO.progress() != null && (taskDTO.progress() < 0 || taskDTO.progress() > 100)) {
+            throw new ValidationException("Progress must be between 0 and 100");
+        }
+        if (taskDTO.labels() != null) {
+            for (String label : taskDTO.labels()) {
+                if (label != null && label.contains(",")) {
+                    throw new ValidationException("Labels cannot contain commas");
+                }
+            }
+        }
     }
 
     public TaskDTO convertToDTO(Task task) {
-        // Return dependency IDs as strings (task IDs)
-        List<String> dependencyKeys = null;
-        if (task.getDependencies() != null && !task.getDependencies().isEmpty()) {
-            dependencyKeys = task.getDependencies().stream()
-                    .map(t -> String.valueOf(t.getId()))
-                    .collect(Collectors.toList());
-        }
-
-        List<String> labels = null;
-        if (task.getLabels() != null && !task.getLabels().isEmpty()) {
-            labels = Arrays.asList(task.getLabels().split(","));
-        }
-
-        String assigneeEmail = task.getAssignee() != null ? task.getAssignee().getEmail() : null;
-
-        List<String> attachments = task.getAttachments() != null
+        var dependencyIds = extractDependencyIds(task);
+        var labels = parseLabels(task.getLabels());
+        var assigneeEmail = task.getAssignee() != null ? task.getAssignee().getEmail() : null;
+        var attachments = task.getAttachments() != null
                 ? new ArrayList<>(task.getAttachments())
-                : new ArrayList<>();
+                : new ArrayList<String>();
 
         return new TaskDTO(
                 task.getId(),
@@ -232,7 +204,7 @@ public class TaskService {
                 task.getDueDate(),
                 assigneeEmail,
                 labels,
-                dependencyKeys,
+                dependencyIds,
                 null,
                 attachments,
                 task.getCreated(),
@@ -242,31 +214,114 @@ public class TaskService {
         );
     }
 
-    /**
-     * Resolves dependency references - accepts both task IDs (integers) and task keys (PROJECT-123)
-     */
-    private List<Task> resolveDependencies(List<String> dependencyRefs) {
+    private List<String> extractDependencyIds(Task task) {
+        if (task.getDependencies() == null || task.getDependencies().isEmpty()) {
+            return null;
+        }
+        return task.getDependencies().stream()
+                .map(t -> String.valueOf(t.getId()))
+                .toList();
+    }
+
+    private List<String> parseLabels(String labelsString) {
+        if (labelsString == null || labelsString.isEmpty()) {
+            return null;
+        }
+        return Arrays.asList(labelsString.split(","));
+    }
+
+    private void persistProjectWithIncrementedTaskCounter(Project project) {
+        projectDAO.save(project);
+    }
+
+    private void updateTaskDependencies(Task task, List<String> dependencyKeys) {
+        if (dependencyKeys != null) {
+            var dependencies = resolveDependenciesBatch(dependencyKeys);
+            validateNoCycles(task, dependencies);
+            task.setDependencies(dependencies);
+        } else {
+            task.setDependencies(new ArrayList<>());
+        }
+    }
+
+    private List<Task> resolveDependenciesBatch(List<String> dependencyRefs) {
         if (dependencyRefs == null || dependencyRefs.isEmpty()) {
             return new ArrayList<>();
         }
 
-        List<Task> dependencies = new ArrayList<>();
+        var numericIds = new ArrayList<Integer>();
+        var taskKeyRefs = new ArrayList<String>();
+        separateIdsFromKeys(dependencyRefs, numericIds, taskKeyRefs);
 
-        for (String ref : dependencyRefs) {
+        var dependencies = new ArrayList<Task>();
+        if (!numericIds.isEmpty()) {
+            dependencies.addAll(taskDAO.getTasksByIdsWithDetails(numericIds));
+        }
+        if (!taskKeyRefs.isEmpty()) {
+            dependencies.addAll(taskDAO.getTasksByTaskKeys(taskKeyRefs));
+        }
+        return dependencies;
+    }
+
+    private void separateIdsFromKeys(List<String> refs, List<Integer> numericIds, List<String> taskKeys) {
+        for (String ref : refs) {
             if (ref == null) continue;
-
-            // Try parsing as integer ID first
             try {
-                Integer taskId = Integer.parseInt(ref);
-                taskDAO.getTaskById(taskId).ifPresent(dependencies::add);
+                numericIds.add(Integer.parseInt(ref));
             } catch (NumberFormatException e) {
-                // Not an integer, try as task key (PROJECT-123)
                 if (ref.contains("-")) {
-                    taskDAO.getTaskByTaskKey(ref).ifPresent(dependencies::add);
+                    taskKeys.add(ref);
                 }
             }
         }
+    }
 
-        return dependencies;
+    private void validateNoCycles(Task task, List<Task> newDependencies) {
+        if (task.getId() == null || newDependencies.isEmpty()) {
+            return;
+        }
+
+        var visitedTaskIds = new HashSet<Integer>();
+        var tasksToCheck = new LinkedList<>(newDependencies);
+
+        while (!tasksToCheck.isEmpty()) {
+            var current = tasksToCheck.poll();
+            if (current.getId().equals(task.getId())) {
+                throw new ValidationException("Circular dependency detected: task cannot depend on itself");
+            }
+            if (visitedTaskIds.add(current.getId()) && current.getDependencies() != null) {
+                tasksToCheck.addAll(current.getDependencies());
+            }
+        }
+    }
+
+    @Transactional
+    public void deleteTask(String projectKey, String taskKey, Integer userId) {
+        var project = projectDAO.getProjectByKey(projectKey)
+                .orElseThrow(() -> new ResourceNotFoundException("Project not found"));
+
+        if (!project.isOwner(userId)) {
+            throw new AuthorizationException("Only project owner can delete tasks");
+        }
+
+        var task = taskDAO.getTaskByTaskKey(taskKey)
+                .orElseThrow(() -> new ResourceNotFoundException("Task not found: " + taskKey));
+
+        if (!task.getProject().getId().equals(project.getId())) {
+            throw new ValidationException("Task does not belong to the specified project");
+        }
+
+        deleteTaskAttachmentsSilently(task);
+        taskDAO.deleteTask(task);
+    }
+
+    private void deleteTaskAttachmentsSilently(Task task) {
+        if (task.getAttachments() == null) return;
+        for (String attachment : task.getAttachments()) {
+            try {
+                fileStorageService.deleteFile(attachment);
+            } catch (Exception ignored) {
+            }
+        }
     }
 }
